[tool.poetry]
name = "MiDaS"
version = "0.1.0-alpha.1"
description = "Depth Estimation"
authors = ["Intelligent Systems Lab"]
readme = "README.md"
license = "MIT"
keywords = ["self-driving", "autonomy", "perception", "planning", "control"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
]
packages = [{include = "midas"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = ">=1.20, <1.24"
imutils = "~0.5.4"
timm = "=0.6.13"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
